Majority of my elements are in, spacing issue for inputs
Majority of my elements are in, spacing issue for inputs

--- a/css/style.css
+++ b/css/style.css
@@ -31,11 +31,6 @@ legend, .signup-msg > div{
   padding-bottom:15px;
 }
 
-.signup-msg{
-  background: #f4f7f8;
-  margin: 0 auto;
-}
-
 legend{
   text-align: left;
   border-top:3px;
@@ -53,20 +48,29 @@ input[id="name"]::placeholder, input[id="email"]::placeholder{
   padding-right:10px;
 }
 
+.wrapper{
+  display: flex;
+  flex-direction: column;
+}
+
 header{
   background:#000080;
   width: 100vw;
   color:white;
   margin: 0 auto;
   flex:1;
+  padding-top:10px;
+  padding-bottom:10px;
 }
 
+main{
+  margin:auto;
+}
 
 form {
   max-width: 384px;
-  margin: auto;
+  margin: 0 auto;
   padding: 10px 20px;
-  background: #f4f7f8;
 }
 
 fieldset{
@@ -74,41 +78,54 @@ fieldset{
 }
 
 fieldset:first-of-type > input,
+select,
 textarea{
   line-height:50px;
   background: rgba(255,255,255,0.1);
-  border: none;
+  border: 3px solid  #707070;
+  border-radius: .3em;
   font-size: 16px;
-  height: auto;
-  outline: 0;
   width: 100%;
   background-color: #e8eeef;
   color: #8a97a0;
   box-shadow: 0 1px 0 rgba(0,0,0,0.03) inset;
   margin-bottom: 30px;
+  float:left;
+  padding:3px 10px 3px 10px;
+}
+
+option{
+  color:black;
+}
+
+label{
+  color: #8a97a0;
 }
 
 fieldset:first-of-type > label, fieldset:nth-of-type(2) > input{
   float:left;
 }
 
-input[type="checkbox"] > label, input[type="radio"] > label{
+input[type="checkbox"] ~ label, input[type="radio"] ~ label{
   float:left;
+  margin-left:3px;
 }
 
 button {
     padding: 19px 39px 18px 39px;
-    color: #FFF;
-    background-color: #4bc970;
+    color: white;
+    background-color: orange;
     font-size: 18px;
     text-align: center;
     font-style: normal;
     border-radius: 5px;
     width: 100%;
-    border: 1px solid #3ac162;
+    border: 1px solid #f27900;
     border-width: 1px 1px 3px;
     box-shadow: 0 -1px 0 rgba(255,255,255,0.1) inset;
     margin-bottom: 10px;
+    margin-left:auto;
+    margin-right:auto;
   }
 
 footer, .signup-msg{
